--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - docker build -t pablobfonseca/node .
   - docker images pablobfonseca/node
 before_deploy:
-  - echo "$HUB_PASSWORD" | docker login -u "$HUB_USERNAME" --password=stdin
+  - echo "$HUB_PASSWORD" | docker login -u "$HUB_USERNAME" --password-stdin
 deploy:
   provider: script
   script: docker push pablobfonseca/node
